test/good/no_text.ulm
.data
a: .ascii "hello"

; no text section