test/bad/bad_escape_sequences.ulm
.text
    nop

.data
a: .ascii "bad \5 sequence"